add missing handlers
